--- a/radio.html
+++ b/radio.html
@@ -10,3 +10,7 @@
 	<input type="radio" name="example input" id="radio-input-3" />
 	<label for="radio-input-3">Radio Input 3</label>
 </div>
+<div class="radio-container disabled">
+	<input type="radio" name="disabled example input" id="radio-input-4" disabled />
+	<label for="radio-input-4">Disabled radio input</label>
+</div>
